examples/test/testpolicy17843.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17843
  namespace: namespace410
spec:
  podSelector:
    matchLabels:
      key43: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value39
          key47: value39
      podSelector:
        matchLabels:
          key44: value19
          key4: value15
          key43: value3
